--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.2.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.fedex</groupId>
+	<groupId>com.kougianos</groupId>
 	<artifactId>aggregator</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Aggregator</name>
-	<description>Fedex Aggregator</description>
+	<description>Rest API Service Aggregator</description>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
